--- a/client/src/pages/MockTest.css
+++ b/client/src/pages/MockTest.css
@@ -938,7 +938,6 @@
   font-size: 0.88rem;
   line-height: 1.7;
   color: #334155;
-  text-align: justify;
   min-width: 120%;
 }
 
